syntax = "proto3";

message WatchMarketRequest {
  string market = 1;
}

message WatchMarketResponse {

  EventType type = 1;
  MarketEvent market_event = 2;

  enum EventType {
      ADD = 0;
      DELETE = 1;
  }
}

message MarketEvent {
  string orderId = 1;
  string amount = 2;
  string price = 3;
  Side side = 4;
}

service OrderBookService {
  rpc WatchMarket (WatchMarketRequest) returns (stream WatchMarketResponse);
}
